--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -297,7 +297,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
         Using an informative prior tailors the level of uncertainty surrounding each interaction and may account for non-independence of interactions (as in abundance-based or KNN models). Despite these benefits, informative priors often involve many assumptions and carry a risk of over-fitting. Also note that researchers wishing to test whether a particular trait influences interaction probabilities should either exclude that trait from their prior or model the network using priors which include and exclude the trait of interest (as in~\citet{Weinstein2017,Weinstein2017a}).
 
 
-        Alternatively, one can develop a prior based on the properties of a set of published networks (``empirical" or ``reference Bayes"~\citet{Spiegelhalter2000}). This type of prior entails only one assumption: that the focal network has similar structural properties to those of published networks. For example, connectance ($C=N/S^2$, where $N$ is the number of interactions and $S$ is the number of species) is available for many networks. The distribution of published connectances can be used to predict the distribution of interaction probabilities in a new network. If we know the mean $\overline{C}$ and variance $\sigma_C^2$ of a distribution of connectances, then the hyperparameters are:
+        Alternatively, one can develop a prior based on the properties of a set of published networks (``empirical" or ``reference Bayes"~\citet{Spiegelhalter2000}). This type of prior entails only one assumption: that the focal network has similar structural properties to those of some published networks. For example, connectance ($C=N/S^2$, where $N$ is the number of interactions and $S$ is the number of species) is available for many networks. The distribution of published connectances can be used to predict the distribution of interaction probabilities in a new network that is similar to those used to construct the prior (same type of interaction, similar taxonomic resolution, habitat, etc.). If we know the mean $\overline{C}$ and variance $\sigma_C^2$ of a distribution of connectances, then the hyperparameters are:
 
         \begin{equation}
         \alpha_{ij}=\overline{C}(\frac{\overline{C}(1-\overline{C})}{\sigma_C^2}-1) ,
@@ -309,6 +309,9 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   
 
         Note that here the prior distribution will be the same for all interaction probabilities. It is also possible to interpret other network properties (e.g., species degrees) in a similar network(s) as interaction probabilities and use these to create a prior (worked example in \emph{Appendix S4}). When using network summary statistics or degree distributions, it is important to consider whether the available information reflects what we believe about the network. Given the likelihood that most published networks are undersampled~\citep{Jordano2016}, it may be wise to include only the highest-quality networks available in a prior. Likewise, only the degree distribution for a similar system is likely to be a reasonable prior for a focal system. For example, if the focal system is large and contains a diverse array of species, it would be inappropriate to use a prior distribution drawn from a small network describing closely-related taxa (demonstrated in \emph{Appendix S7}). Similarly, data from a network where nodes are resolved to different taxonomic levels than the focal network are likely to have quite different properties and would not be an appropriate prior.
+
+
+        Note that if the focal network is substantially different from published networks, empirical Bayes will not give reasonable expectations about interaction probabilities in the focal network. [[Seems like R1 is demanding we add some more about how empirical Bayes is crap ... maybe we can say it'd give a reasonable expectation for the number of interactions but maybe not the right ones?]]
 
 
         If a similar dataset is not available, it is also possible to use data from the study at hand to develop a prior (i.e., ``approximate Bayes"~\citet{Gelmanblog})~\citep{Spiegelhalter2000}. This approach is used in medical testing~\citep{Spiegelhalter2000} and disease modelling~\citep{Leyland2005} using information from pilot studies and can easily be applied to ecological systems. Returning to the example of degree distributions, approximate Bayes allows us to use information from abundant and easily-sampled species to predict interaction probabilities for species which were observed only rarely. Despite its practicality, approximate Bayes has been criticised for being overly subjective~\citep{Berger2006} and because estimating hyperparameters from data serves as an approximation of some true hyperparameters which remain unknown~\citep{Gelmanblog}. We therefore encourage researchers to carefully consider whether external data or an appropriate trait model is available before opting for a prior based on some of their own data. Nevertheless, there are likely to be many situations where approximate Bayes provides the best way to describe the uncertainty in the dataset. We therefore illustrate this approach in the following empirical example.
@@ -365,7 +368,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, leading to pervasive under-estimation of interactions in published networks~\citep{Jordano2016}. Even in the most extensive data set that we could find, there was very little empirical data for each species pair. Most pairs of species were not observed co-occurring even once, less than 10\% of species pairs were observed interacting, and no pairs were observed to co-occur frequently enough to conclude that their probability of interacting was below 0.01. This suggests that limited sampling is a major source of uncertainty in empirical networks, in agreement with~\citet{Jordano2016,Weinstein2017a,Weinstein2017}. 
 
 
-  Although 374 sampling sites were not enough to obtain sufficient observations of all species pairs, we were able to reduce uncertainty about many potential interactions using a simple Bayesian framework. This framework allowed us to set confidence intervals about the probability of an unobserved interaction occurring based on the distribution of interactions in one ``pilot'' site. This gives us more reasonable estimates of interaction probabilities than assuming that no unobserved interactions actually occur. Such approaches are particularly useful when considering interactions involving species entering new ranges due to climate change or introductions. Understanding these species' interactions is important for a variety of conservation questions~\citep{Bartomeus2013,Gravel2013}, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
+  Although 374 sampling sites were not enough to obtain sufficient observations of all species pairs, we were able to reduce uncertainty about many potential interactions using a simple Bayesian framework. This framework allowed us to set confidence intervals about the probability of an unobserved interaction occurring based on the distribution of interactions in one ``pilot'' site. This gives us more reasonable estimates of interaction probabilities than assuming that no unobserved interactions actually occur. Such approaches are particularly useful when considering interactions involving species entering new ranges due to climate change or introductions. Our framework could, for example, be used to predict the probability of interaction between a galler and parasitoid at a new site on the frontier of their ranges. If the species have not been observed co-occurring at other sites, we would expect them to interact with a probability of approximately 0.1 rather than assuming that they will not interact because they have not been observed interacting elsewhere (Fig.~\ref{Salix_pdfs_cdfs}). Understanding species' interactions in novel or changing communities is important for a variety of conservation questions~\citep{Bartomeus2013,Gravel2013}, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
 
 
   % Our results also demonstrate how incomplete detection of interactions scales up to affect network structure. The structure of the well-sampled network used in our case study is most similar to the structure of simulated networks including only 50\% of the interactions suggested by the posterior distribution of interaction probabilities. This poor detection rate is similar to that reported in other studies~\citep{Bartomeus2013,Jordano2016,Weinstein2017a}. If our descriptions of empirical systems are generally missing so many feasible interactions, then it is vital to acknowledge this inherent uncertainty before comparing structures across systems or relating structure to stability.
@@ -404,7 +407,7 @@ All data used in this study have been independently published and are accessible
     \indent After combining these layers of uncertainty, some interactions which truly occur are very unlikely to be observed. The observed matrix (bottom) is a subsample of the true matrix where the probability of observing each interaction depends upon multiple layers of uncertainty. Note that some low-probability interactions (e.g., lion predation on zebra) are included while others (e.g., lion predation on elephants) are not. For an illustration of the way in which these levels of uncertainty combine in simulated data, and the effects of uncertainty on network structure, see \emph{Appendix S1}. Attributions for images are given in \emph{Appendix S1-A}.}
     \label{conceptual_fig}
     \begin{center}
-    % \includegraphics*[height=.45\textheight]{figures/conceptual_fig.eps}
+    \includegraphics*[height=.45\textheight]{figures/conceptual_fig.eps}
     % \includegraphics*[height=.5\textheight]{Figure_1.eps}
     \end{center}
     \end{figure}
@@ -416,22 +419,22 @@ All data used in this study have been independently published and are accessible
       \textbf{C)} For each species pair, the number of observed interactions plotted against the number of observed co-occurrences. The red, dashed line indicates a 1:1 relationship.}
       \label{histograms}
       \begin{center}
-      % \includegraphics*[height=.6\textheight]{figures/GP_histogram.eps}
+      \includegraphics*[height=.6\textheight]{figures/GP_histogram.eps}
       % \includegraphics*[height=.6\textheight]{Figure_2.eps}
       \end{center}
       \end{figure}
 
 
   % \begin{figure}[h!]
-  %   \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction never occurs. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution depending upon the number of observed interactions $k$ and observed co-occurrences $n$. The maximum likelihood estimate (MLE) for $\lambda_{ij}$ is $\lambda_{MLE}=\frac{k}{n}$. Note that $\lambda_{ij}$ is not a point estimate but rather a random variable with an unknown distribution. This means that if $k=0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k=0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless some chance that the two species \emph{could} interact.\\
-  %   Importantly, we can estimate the variance of $\lambda_{ij}$ as well as the MLE; available methods include the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]). The distribution of the MLE for $\lambda_{ij}$ thus obtained is a key part of the Bayesian distribution for $\lambda_{ij}$.
-  %   Here we show the upper bound (solid black line) of a 95\% Clopper-Pearson true credible interval for the interaction probability $\lambda_{ij}$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k=0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high unless we have some other reason to believe that an interaction cannot occur (i.e., a strong prior).}
-  %   \label{upper_limits}
-  %   \begin{center}
-    % \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
-  %   % \includegraphics*[width=.8\textwidth]{Figure_3.eps}
-  %   \end{center}
-  %   \end{figure}
+    %   \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction never occurs. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution depending upon the number of observed interactions $k$ and observed co-occurrences $n$. The maximum likelihood estimate (MLE) for $\lambda_{ij}$ is $\lambda_{MLE}=\frac{k}{n}$. Note that $\lambda_{ij}$ is not a point estimate but rather a random variable with an unknown distribution. This means that if $k=0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k=0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless some chance that the two species \emph{could} interact.\\
+    %   Importantly, we can estimate the variance of $\lambda_{ij}$ as well as the MLE; available methods include the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]). The distribution of the MLE for $\lambda_{ij}$ thus obtained is a key part of the Bayesian distribution for $\lambda_{ij}$.
+    %   Here we show the upper bound (solid black line) of a 95\% Clopper-Pearson true credible interval for the interaction probability $\lambda_{ij}$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k=0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high unless we have some other reason to believe that an interaction cannot occur (i.e., a strong prior).}
+    %   \label{upper_limits}
+    %   \begin{center}
+      % \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
+    %   % \includegraphics*[width=.8\textwidth]{Figure_3.eps}
+    %   \end{center}
+    %   \end{figure}
 
 
   \begin{figure}[h!]
@@ -439,7 +442,7 @@ All data used in this study have been independently published and are accessible
     Dashed lines indicate threshold probabilities of 0.01, 0.05, and 0.1. The number of samples required to obtain a 95\% credible interval below each threshold increases rapidly. It takes just over 20 observed co-occurrences to be 95\% confident that $\lambda_{ij}<0.10$ but over 100 co-occurrences to be 95\% confident that $\lambda_{ij}<0.01$.}
     \label{Salix_pdfs_cdfs}
     \begin{center}
-    % \includegraphics*[width=.8\textwidth]{figures/GP_pdfs_increasing_N_Zillis.eps}
+    \includegraphics*[width=.8\textwidth]{figures/GP_pdfs_increasing_N_Zillis.eps}
     % \includegraphics*[width=.8\textwidth]{Figure_4.eps}
     \end{center}
     \end{figure}
