made a figure to see the effect of different prior

--- a/manuscript/manual.bib
+++ b/manuscript/manual.bib
@@ -32,12 +32,12 @@ year={1906},
 title={Sur les fonctions convexes et les in{\'{e}}galit{\'{e}}s entre les valeurs moyennes},
 }
 @article{Giron2018,
-author={Giron, D and Dubreuil, G and Bennett, A and Dedeine, F and Dicke, M and Dyer, Lynna A and Erb, M and Harris, Marion O. and Huguet, E and Kaloshian, I and Kawakita, A and Lopez-Vaamonde, C and Palmer, Todd M and Petanidou, T and Poulsen, M and Sall\'{e}, A and Simon, J and Terblanche, John S and Thi\'{e}ry, D and Whiteman, Noah K and Woods, H Arthur and Pincebourde, S},
+author = {Giron, D and Dubreuil, G and Bennett, A and Dedeine, F and Dicke, M and Dyer, Lynna A and Erb, M and Harris, Marion O. and Huguet, E and Kaloshian, I and Kawakita, A and Lopez-Vaamonde, C and Palmer, Todd M and Petanidou, T and Poulsen, M and Sall{\'e}, A and Simon, J and Terblanche, John S and Thi{\'e}ry, D and Whiteman, Noah K and Woods, H Arthur and Pincebourde, S},
+doi={10.1111/eea.12679},
 journal={Entomologia Experimentalis et Applicata},
 year={2018},
 volume={166},
 pages={319--343},
-doi={10.1111/eea.12679},
 title={Promises and challenges in insect-plant interactions},
 }
 @article{Morris2014,
