--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -132,39 +132,19 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     Representing an ecological community as a network addresses both community composition and interspecific interactions~\citep{Roslin2016}. Identifying these interactions is critical to understanding species' effects on each other and predicting community responses to perturbations~\citep{Bartomeus2016,Giron2018}. Importantly, information is conveyed both by the presence and \emph{absence} of interactions. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed~\citep{Jordano2016}. 
 
 
-    First, ecological communities are stochastic~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}, leading to variation in encounter probabilities and hence interactions~\citep{Vazquez2005,Poisot2015,Graham2018}. Species must co-occur in order to be observed interacting, so any variation in co-occurrence will create variation in the set of observed interactions~\citep{Gravel2018,Graham2018}. Even assuming constant co-occurrence within a system, changing abundances can affect interactions if species which would otherwise interact become too rare to detect each other~\citep{Tylianakis2010,Jordano2016}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Olesen2011a,Lopez2017}, between individuals~\citep{Pires2011a,Wells2013,Fodrie2015,Novak2015}, throughout life cycles~\citep{Clegg2018}, and with environmental conditions~\citep{Poisot2015}.
+    First, ecological communities are stochastic~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}, leading to variation in encounter probabilities and hence interactions~\citep{Vazquez2005,Poisot2015}. Species must co-occur in order to be observed interacting, so any variation in co-occurrence will create variation in the set of observed interactions~\citep{Gravel2018,Graham2018}. Even assuming constant co-occurrence within a system, changing abundances can affect interactions if species which would otherwise interact become too rare to detect each other~\citep{Tylianakis2010,Jordano2016}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Olesen2011a,Lopez2017}, between individuals~\citep{Pires2011a,Wells2013,Fodrie2015,Novak2015}, throughout life cycles~\citep{Clegg2018}, and with environmental conditions~\citep{Poisot2015}.
 
 
-    Beyond ``true" variation in network structure, several researchers note effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Jordano2016}). Assessments of the accumulation of interactions with increasing sampling effort suggest that it is more challenging to correctly document interactions than species~\citep{Guimera2009,Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeus2013,Poisot2016}. Such efforts usually take the form of creating model networks that approximate observed empirical networks~\citep{Allesina2008,Guimera2009,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Weinstein2017,Weinstein2017a,Graham2018} or on simple abstract rules~\citep{Allesina2008,Guimera2009,Williams2010}. Model networks provide an important ''reality check'' by allowing hypothesis testing about factors structuring ecological networks~\citep{Bartomeus2013,Weinstein2017,Weinstein2017a,Graham2018}. They can also allow estimation of the numbers unobserved of interactions~\citep{Jordano2016,Weinstein2017a} and predict which unobserved interactions are most likely~\citep{Guimera2009,Bartomeus2013}. 
+    Beyond ``true" variation in network structure, several researchers note effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Jordano2016}). Assessments of the accumulation of interactions with increasing sampling effort suggest that it is more challenging to correctly document interactions than species~\citep{Guimera2009,Poisot2012,Bartomeus2013,Jordano2016,Giron2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeus2013,Poisot2016}. Such efforts usually take the form of creating model networks that approximate observed empirical networks~\citep{Allesina2008,Guimera2009,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Weinstein2017a,Graham2018} or on simple abstract rules~\citep{Allesina2008,Guimera2009,Williams2010}. Model networks provide an important ''reality check'' by allowing hypothesis testing about factors structuring ecological networks~\citep{Bartomeus2013,Graham2018}. They can also allow estimation of the numbers unobserved of interactions~\citep{Jordano2016,Weinstein2017a} and predict which unobserved interactions are most likely~\citep{Guimera2009,Bartomeus2013}. 
 
 
-    To date, models incorporating uncertainty have either been very general (e.g.,~\citet{Guimera2009,Gravel2018}) or very system-specific (e.g.,~\citet{Bartomeus2013,Weinstein2017,Weinstein2017a,Graham2018}); in either case such a model may be a poor fit for a particular study system. Moreover, some of the models described above cannot accommodate species observed only once~\citep{Bartomeus2013,Weinstein2017}. As rare species are likely to be observed less frequently~\citep{Bluthgen2006} and may be of particular interest (e.g., when modelling species loss), there is a need for a more widely-applicable framework that includes rarely-observed species. 
+    To date, models incorporating uncertainty have either been very general (e.g.,~\citet{Guimera2009,Gravel2018}) or very system-specific (e.g.,~\citet{Bartomeus2013,Graham2018}); in either case such a model may be a poor fit for a particular study system. Moreover, some of the models described above cannot accommodate species observed only once~\citep{Bartomeus2013,Weinstein2017}. As rare species are likely to be observed less frequently~\citep{Bluthgen2006} and may be of particular interest (e.g., when modelling species loss), there is a need for a more widely-applicable framework that includes rarely-observed species. 
 
 
     Here we introduce a simple, adaptable Bayesian framework. First, we briefly describe the nested levels of uncertainty affecting ecological network construction. Understanding this nesting is an important step towards formalising our interpretation of the different drivers of uncertainty about interactions. Importantly, we distinguish between the possibility that an interaction is unfeasible (cannot occur) and the possibility that, given an interaction is feasible, it may not occur during a particular sampling event. 
 
 
     In the context of this uncertainty, which can be reduced but not eliminated by high-quality sampling~\citep{Bartomeus2013}), we present a Bayesian framework which combines observed data with a prior expectation of interaction probabilities. We conclude with a worked example applying this framework to an intensively-sampled host-parasitoid network. We find that even the highest-quality empirical network data we could find has substantial uncertainty about whether many pairs of species interact, demonstrating the need to include information about this uncertainty in published networks. 
-    % We also show that this interaction-level uncertainty leads to uncertainty about estimates of network structure, with important implications for comparisons across networks; especially those compiled with different sampling intensity~\citep{Pelissier2017,Tylianakis2017,Weinstein2017}.
-
-
-    % Development of molecular sampling methods such as DNA barcoding hold great potential for uncovering interactions missed by other sampling methods (such as visit surveys)~\citep{Giron2018}, but these novel methods are also somewhat error-prone at present~\citep{}. 
-
-    % Accounting for differences in feasible (binary) interactions across life stages changes network structure~\citep{Clegg2018}.
-
-    % Representing an ecological community as a network summarises both species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition such as alpha diversity. A network framework combines this tabulation of nodes with a list of interactions (links between nodes) so that networks provide additional, higher-order information on community structure. Despite this additional information, empirical descriptions of ecological networks are still often limited by a lack of data or tools to adequately incorporate variation in interactions into networks. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
-
-
-    % The assumption of static communities contrasts with the known stochasticity of ecological communities~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a}, and between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}. Worse, variability in community composition and interactions may not be closely related. The removal of a species from a site will obviously also remove its interactions but, conversely, the co-occurrence of potentially interacting species does not guarantee that the species will interact at a given place and time. Interactions can be lost if the interaction partners remain present but are separated in time or are too rare to detect each other~\citep{Tylianakis2010}. Interactions can also fail to occur because of environmental contingencies~\citep{Poisot2015} or individual preferences~\citep{Fodrie2015}. 
-
-
-    % Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to document interactions than species~\citep{Poisot2012,Bartomeus,others}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Poisot2016}. Early work in this vein includes food-web models using likelihood-based approaches~\citep{Allesina2008} or Gaussian~\citep{Williams2010} or binomial~\citep{Rohr2016} probability functions for each possible interaction. These models may include information about species' traits~\citep{Rohr2016} or attempt to reproduce empirical network structures using a set of simple rules~\citep{Allesina2008,Williams2010}.
-
-
-    % Despite these efforts, we currently lack the quantitative methodology to deal with uncertainty generated by spatiotemporal variation in ecological interactions and by limited sampling. [[cite previous attempts]] Even in well-sampled networks, uneven sampling across species can lead to the inference that some species do not interact because they co-occur rarely or have not yet been observed together - even if they do interact when they do co-occur (see Fig.~\ref{histograms}). Nearly all network studies will thus neglect some interactions, necessitating an approach that acknowledges this uncertainty.
-
-
-    % In this study, we formalise the description of interactions between species as probabilities and develop analytical tools to capture the uncertainty in the estimation of these interactions. We focus on binary interactions as a first step, but the framework could be expanded to deal with interaction frequencies or strengths. To define the problem, we first identify different contributions to the uncertainty of an interaction and discuss the implications of each source of uncertainty for the properties of ecological networks. 
 
 
     \subsection*{Why are some interactions not observed?}
@@ -180,10 +160,10 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
         \subsubsection*{Did the species interact during sampling?} 
 
-          A feasible interaction (i.e., $L_{ij}=1$;), still may not occur at a particular place and time~\citep{Poisot2015,Graham2018}. This could be because constraints such as inclement weather or low abundance prevented the interaction~\citep{Jordano2016,Graham2018}, a preferred interaction partner was available~\citep{Weinstein2017a}, or individual variation in traits meant that local individuals could not interact even if the species in general can~\citep{Gravel2013,Wells2013,Poisot2015}. For example, a rare galler may not parasitize a rare plant because they do not encounter each other. In metawebs, an interaction may not occur locally because two species do not co-occur at a particular site even if they do co-occur and interact elsewhere~\citep{Graham2018}. We can define the local realisation of an interaction, $X_{ij}$, given that the interaction is feasible, as a stochastic process with associated probability $P(X_{ij}|L_{ij}=1)=\chi_{ij}$. It is unlikely that $\chi_{ij}=1$  except in the case of obligate specialists who always interact whenever they co-occur and always co-occur. When $\chi_{ij}<1$, we cannot be sure whether an unobserved interaction cannot occur or whether it simply did not occur at a particular site.
+          A feasible interaction (i.e., $L_{ij}=1$;), still may not occur at a particular place and time~\citep{Poisot2015}. This could be because constraints such as inclement weather or low abundance prevented the interaction~\citep{Jordano2016}, a preferred interaction partner was available~\citep{Weinstein2017a}, or individual variation in traits meant that local individuals could not interact even if the species in general can~\citep{Gravel2013,Wells2013,Poisot2015}. For example, a rare galler may not parasitize a rare plant because they do not encounter each other. In metawebs, an interaction may not occur locally because two species do not co-occur at a particular site even if they do co-occur and interact elsewhere~\citep{Graham2018}. We can define the local realisation of an interaction, $X_{ij}$, given that the interaction is feasible, as a stochastic process with associated probability $P(X_{ij}|L_{ij}=1)=\chi_{ij}$. It is unlikely that $\chi_{ij}=1$  except in the case of obligate specialists who always interact whenever they co-occur and always co-occur. When $\chi_{ij}<1$, we cannot be sure whether an unobserved interaction cannot occur or whether it simply did not occur at a particular site.
 
 
-          Some of the uncertainty about $\chi_{ij}$ could be addressed by drawing on the rich literature about interaction contingencies. Phenological matching~\citep{MillerRushing2010}, species preferences~\citep{Pires2011a,Novak2015}, and fear effects~\citep{Luttbeg2005} all affect the probability of an interaction and could be included in models similar to trait-matching models. Some studies attempt to reduce uncertainty by sampling intensively over a short period of time and restricting the scale of interest to interactions occurring at the sampling site and time (conflating $\chi_{ij}$ and $\lambda_{ij}$)~\citep{Bartomeus2013,Weinstein2017,Weinstein2017a}. This approach does reduce local-scale uncertainty but is not appropriate if we wish to assemble the full set of interactions which occur in a community (beyond the specific site and time of sampling). In contrast, expanding sampling to cover a broader spatial or temporal range (e.g., sampling in a variety of micro-habitats or during a variety of weather conditions) will help to reduce uncertainty about $\chi_{ij}$ by including a broader range of parameters affecting interaction probability. It is unlikely, however, that resources will permit researchers to sample extensively in the full range of sites and conditions covered by a community, and some uncertainty about $\chi_{ij}$ will remain.
+          Some of the uncertainty about $\chi_{ij}$ could be addressed by drawing on the rich literature about interaction contingencies. Phenological matching~\citep{MillerRushing2010}, species preferences~\citep{Pires2011a,Novak2015}, and fear effects~\citep{Luttbeg2005} all affect the probability of an interaction and could be included in models similar to trait-matching models. Some studies attempt to reduce uncertainty by sampling intensively over a short period of time and restricting the scale of interest to interactions occurring at the sampling site and time (conflating $\chi_{ij}$ and $\lambda_{ij}$)~\citep{Bartomeus2013,Weinstein2017a}. This approach does reduce local-scale uncertainty but is not appropriate if we wish to assemble the full set of interactions which occur in a community (beyond the specific site and time of sampling). In contrast, expanding sampling to cover a broader spatial or temporal range (e.g., sampling in a variety of micro-habitats or during a variety of weather conditions) will help to reduce uncertainty about $\chi_{ij}$ by including a broader range of parameters affecting interaction probability. It is unlikely, however, that resources will permit researchers to sample extensively in the full range of sites and conditions covered by a community, and some uncertainty about $\chi_{ij}$ will remain.
 
          % One proposed solution to the problem of process uncertainty is to use repeated sampling of networks. For example,~\citet{Weinstein2017-wrong one?} used repeated sampling to estimate the daily probability of detecting an interaction and thereby attempted to separate detection and process uncertainty.[[This apparently confused R3]] While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), which would require multi-year sampling efforts, or very rare interactions which would require extremely high sampling effort to detect. Moreover, the faster accumulation of species than interactions means that repeated sampling will tend to introduce more unobserved interactions than observed interactions unless the number of samples is high enough to ensure that all species present have been observed~\citep{Poisot2012,Jordano2016}.
 
@@ -291,10 +271,10 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
       \textbf{Informative priors}
 
-        We often have some prior knowledge which can inform uncertainty about interactions. One common example is the well-justified assumption that plants never consume animals in a food web; excluding carnivorous plants it is not contentious to say that we are certain that unobserved links indicating plants feeding on animals truly do not occur. Similarly, if we observed two species which are normally obligate mutualists co-occurring but not interacting, we would be very doubtful that a zero reflecting this interaction was true (i.e., high uncertainty about this zero). It is straightforward to extend the intuition behind these special cases to the full set of species in a network using trait-based models if the traits likely to affect interaction probabilities are known (e.g.,~\citet{Gravel2013,Bartomeus2016,Weinstein2017}). Informative models could also include information on abundances, phenological matching, co-occurrence, etc. as available~\citep{Jordano2016,Weinstein2017a,Graham2018,Gravel2018}. Multiple sources of information can be combined into a single model (e.g., the the $K$ nearest neighbour (KNN) algorithm, which identifies likely interaction partners based on similarity to known partners~\citep{DesjardinsProulx2017}). This would result in a highly informative prior that would, moreover, account for some of the non-independence in interaction probabilities. 
+        We often have some prior knowledge which can inform uncertainty about interactions. One common example is the well-justified assumption that plants never consume animals in a food web; excluding carnivorous plants it is not contentious to say that we are certain that unobserved links indicating plants feeding on animals truly do not occur. Similarly, if we observed two species which are normally obligate mutualists co-occurring but not interacting, we would be very doubtful that a zero reflecting this interaction was true (i.e., high uncertainty about this zero). It is straightforward to extend the intuition behind these special cases to the full set of species in a network using trait-based models if the traits likely to affect interaction probabilities are known (e.g.,~\citet{Gravel2013,Bartomeus2016,Weinstein2017}). Informative models could also include information on abundances, phenological matching, co-occurrence, etc. as available~\citep{Jordano2016,Weinstein2017a,s,Gravel2018}. Multiple sources of information can be combined into a single model (e.g., the the $K$ nearest neighbour (KNN) algorithm, which identifies likely interaction partners based on similarity to known partners~\citep{DesjardinsProulx2017}). This would result in a highly informative prior that would, moreover, account for some of the non-independence in interaction probabilities. 
 
 
-        Using an informative prior tailors the level of uncertainty surrounding each interaction and may account for non-independence of interactions (as in abundance-based or KNN models). Despite these benefits, informative priors often involve many assumptions and carry a risk of over-fitting. Also note that researchers wishing to test whether a particular trait influences interaction probabilities should either exclude that trait from their prior or model the network using priors which include and exclude the trait of interest (as in~\citet{Weinstein2017,Weinstein2017a}).
+        Using an informative prior tailors the level of uncertainty surrounding each interaction and may account for non-independence of interactions (as in abundance-based or KNN models). Despite these benefits, informative priors often involve many assumptions and carry a risk of over-fitting. Also note that researchers wishing to test whether a particular trait influences interaction probabilities should either exclude that trait from their prior or model the network using priors which include and exclude the trait of interest (as in~\citet{Weinstein2017a}).
 
 
         Alternatively, one can develop a prior based on the properties of a set of published networks (``empirical" or ``reference Bayes"~\citet{Spiegelhalter2000}). This type of prior entails only one assumption: that the focal network has similar structural properties to those of some published networks. For example, connectance ($C=N/S^2$, where $N$ is the number of interactions and $S$ is the number of species) is available for many networks. The distribution of published connectances can be used to predict the distribution of interaction probabilities in a new network that is similar to those used to construct the prior (same type of interaction, similar taxonomic resolution, habitat, etc.). If we know the mean $\overline{C}$ and variance $\sigma_C^2$ of a distribution of connectances, then the hyperparameters are:
@@ -365,10 +345,13 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 \section*{Discussion}
 
 
-  Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, leading to pervasive under-estimation of interactions in published networks~\citep{Jordano2016}. Even in the most extensive data set that we could find, there was very little empirical data for each species pair. Most pairs of species were not observed co-occurring even once, less than 10\% of species pairs were observed interacting, and no pairs were observed to co-occur frequently enough to conclude that their probability of interacting was below 0.01. This suggests that limited sampling is a major source of uncertainty in empirical networks, in agreement with~\citet{Jordano2016,Weinstein2017a,Weinstein2017}. 
+  Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, leading to pervasive under-estimation of interactions in published networks~\citep{Jordano2016}. Even in the most extensive data set that we could find, there was very little empirical data for each species pair. Most pairs of species were not observed co-occurring even once, less than 10\% of species pairs were observed interacting, and no pairs were observed to co-occur frequently enough to conclude that their probability of interacting was below 0.01. This suggests that limited sampling is a major source of uncertainty in empirical networks, in agreement with~\citet{Jordano2016,Weinstein2017a}. 
 
 
   Although 374 sampling sites were not enough to obtain sufficient observations of all species pairs, we were able to reduce uncertainty about many potential interactions using a simple Bayesian framework. This framework allowed us to set confidence intervals about the probability of an unobserved interaction occurring based on the distribution of interactions in one ``pilot'' site. This gives us more reasonable estimates of interaction probabilities than assuming that no unobserved interactions actually occur. Such approaches are particularly useful when considering interactions involving species entering new ranges due to climate change or introductions. Our framework could, for example, be used to predict the probability of interaction between a galler and parasitoid at a new site on the frontier of their ranges. If the species have not been observed co-occurring at other sites, we would expect them to interact with a probability of approximately 0.1 rather than assuming that they will not interact because they have not been observed interacting elsewhere (Fig.~\ref{Salix_pdfs_cdfs}). Understanding species' interactions in novel or changing communities is important for a variety of conservation questions~\citep{Bartomeus2013,Gravel2013}, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
+
+
+  Note that, as in all Bayesian analyses, our results do depend on the prior chosen. To demonstrate this, we repeated our analyses using a prior derived from a study of gallers found on several genotypes of \emph{Salix hookeriana} and the parasites which emerged from them (\citealp{Barbour2016,Barbour2016Dryad}; \emph{Appendix S7}). Although the study system is similar to that in~\citet{Kopelke2017}, the network is quite different due to using different genotypes of a single \emph{Salix} species rather than several \emph{Salix} species as the basis for sampling. While this had a relatively small effect on our expectations for the galler-parasitoid community (\emph{Appendix S7}), the prior based on \citep{Barbour2016} resulted in very high probabilities of interaction between \emph{Salix} and galler pairs that were not observed interacting (Fig.~\ref{prior_comparison}). No amount of additional sampling would allow us to conclude that a given \emph{Salix}-galler pair did not interact with a threshold interaction probability of 0.01. This is reasonable for the situation described in~\citet{Barbour2016}, as it is very likely that gallers which can interact with one \emph{S. hookeriana} genotype can interact with most others, but is not reasonable for the more diverse community in~\citet{Kopelke2017}. This demonstrates the importance of conducting a "sanity check" on the posterior distribution obtained from any given prior.
 
 
   % Our results also demonstrate how incomplete detection of interactions scales up to affect network structure. The structure of the well-sampled network used in our case study is most similar to the structure of simulated networks including only 50\% of the interactions suggested by the posterior distribution of interaction probabilities. This poor detection rate is similar to that reported in other studies~\citep{Bartomeus2013,Jordano2016,Weinstein2017a}. If our descriptions of empirical systems are generally missing so many feasible interactions, then it is vital to acknowledge this inherent uncertainty before comparing structures across systems or relating structure to stability.
@@ -447,6 +430,16 @@ All data used in this study have been independently published and are accessible
     \end{center}
     \end{figure}
 
+
+  \begin{figure}[h!]
+    \caption{Posterior distributions for the interaction probability ($\lambda_{ij}$) for two species that have not been observed interacting ($k_{ij}=0$), A) based on a single site (Zillis in Graub\"{u}nden, Switzerland) from~\citet{Kopelke2017} and B) based on a network describing interactions between gallers and several genotypes of \emph{Salix hookeriana} from~\citet{Barbour2016}. Posterior distributions (curves) and 95\% credible intervals (lines at top of panel) for $\lambda_{ij}$ narrow and approach zero as the number of observed co-occurrences ($n_{ij}$) increases. Diamonds indicate the maximum likelihood estimator for the mean probability of interaction.
+    Dashed lines indicate threshold probabilities of 0.01, 0.05, and 0.1. Note that the prior obtained from~\citet{Barbour2016} constrains the MLE  of $\lambda_{ij}$ above 0.01.}
+    \label{prior_comparison}
+    \begin{center}
+    \includegraphics*[width=.8\textwidth]{figures/SG_pdfs_prior_comparison.eps}
+    % \includegraphics*[width=.8\textwidth]{Figure_4.eps}
+    \end{center}
+    \end{figure}
 
   % \begin{figure}[h!]
   %   \caption{Mean connectance, links per galler, nestedness (NODF), and links per natural enemy for networks assembled using posterior distributions based on a single site (Zillis in Graub\"{u}nden, Switzerland) from~\citet{Kopelke2017} occupied a narrow range. To obtain distributions of network properties, we created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``filtered" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean (+/- SD) network property (e.g., connectance) obtained from a set of 100 filtered networks. The filtered networks cover a broader range of network properties than the posterior-sampling networks but the value of each property decreases as the strength of the detection filter increases. Values in the original web are indicated by dashed lines.}
